--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,16 @@
 .site-nav a:hover {
   text-decoration: underline;
 }
+
+h1, h2, h3 {
+  font-family: 'Segoe UI', Arial, sans-serif;
+}
+
+a {
+  color: #1DA1F2; /* soft blue */
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
